lib/src/compiler/tests/testdata/errors/54.out
error[E100]: wrong type
 --> line:4:29
  |
4 |     test_proto2.array_int64["foo"]
  |                             ^^^^^ expression should be `integer`, but is `string`
  |